# swhkdp

./: .gitignore  .rustfmt.toml  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  Makefile  README.md  TODO.md  flake.nix  swhkd.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
contrib/: PKGBUILD
contrib/init/systemd/: README.md  hotkeys.service  hotkeys.sh
docs/: swhkd-keys.5.scd  swhkd.1.scd  swhkd.5.scd  swhkdp.1.scd  swhkdp.5.scd  swhks.1.scd
nix/: default.nix  module.nix  package.nix  shell.nix
scripts/: build-polkit-policy.sh
swhkd/: Cargo.toml
swhkd/src/: config.rs  daemon.rs  environ.rs  uinput.rs
swhkdp/: Cargo.toml  build.rs
swhkdp/src/: config.rs  daemon.rs  environ.rs  macro_runner.rs  perms.rs  rel_mask.rs  uinput.rs
swhks/: Cargo.toml
swhks/src/: environ.rs  main.rs
