[workspace]
members = [
	"swhkd",
	"swhks"
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.26"
nix = { version = "0.29", features = ["signal", "user", "fs", "ioctl"] }
sysinfo = "0.33.1"

[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
