[workspace]
members = [
	"swhkdp",
	"swhks"
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
nix = { version = "0.30", features = ["signal", "user", "fs", "ioctl"] }
sysinfo = "0.37.2"

[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
