[workspace]
members = [
	"swhkdp",
	"swhks"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "1.4.0"
license = "BSD-2-Clause"
authors = [
	"id3v1669 <id3v1669@gmail.com>\n",
]

[workspace.dependencies]
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.29"
nix = { version = "0.31", features = ["signal", "user", "fs", "ioctl"] }
sysinfo = "0.38.4"

[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
