[package]
description = "Sxhkd clone for Wayland (works on TYY and X11 too)"
edition = "2021"
name = "Simple-Wayland-HotKey-Daemon"
version = "1.3.0"

[build-dependencies]
flate2 = "1.0.30"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.3"
evdev = { version = "0.12.2", features = ["tokio"] }
itertools = "0.13.0"
log = "0.4.22"
nix = "0.26.4"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
sysinfo = "0.30.12"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-udev = "0.9.1"

[[bin]]
name = "swhkd"
path = "src/daemon.rs"
