[package]
description = "Sxhkd clone for Wayland (works on TYY and X11 too)"
edition = "2021"
name = "Simple-Wayland-HotKey-Daemon"
version = "1.3.0-git"
authors = [
	"Shinyzenith <aakashsensharma@gmail.com>\n",
	"Angelo Fallaria <ba.fallaria@gmail.com>\n",
	"EdenQwQ <lsahlm1eden@gmail.com>\n",
]

[features]
rfkill = []

[build-dependencies]
flate2 = "1.0.33"

[dependencies]
clap.workspace = true
env_logger.workspace = true
log.workspace = true
nix.workspace = true
sysinfo.workspace = true

evdev = { version = "0.12.2", features = ["tokio"] }
itertools = "0.13.0"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
sweet = { git = "https://github.com/waycrate/sweet.git", version = "0.3.0" }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-udev = "0.9.1"

[[bin]]
name = "swhkd"
path = "src/daemon.rs"
