[package]
description = "Sxhkd clone for Wayland (works on TYY and X11 too)"
edition = "2021"
name = "Simple-Wayland-HotKey-Daemon"
version = "1.3.0-git"
authors = [
	"Shinyzenith <aakashsensharma@gmail.com>\n",
	"Angelo Fallaria <ba.fallaria@gmail.com>\n",
	"EdenQwQ <lsahlm1eden@gmail.com>\n",
]

[features]
rfkill = []

[build-dependencies]
flate2 = "1.1.0"

[dependencies]
clap.workspace = true
env_logger.workspace = true
log.workspace = true
nix.workspace = true
sysinfo.workspace = true

evdev = { version = "0.13.0", features = ["tokio", "stream-trait"] }
itertools = "0.14.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_yml = "0.0.12"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-udev = "0.9.1"

[[bin]]
name = "swhkd"
path = "src/daemon.rs"
