[package]
description = "Sxhkd clone for Wayland (works on TYY and X11 too)"
edition = "2024"
name = "Simple-Wayland-HotKey-Daemon-Polkit"
version = "1.3.1-git"
authors = [
	"id3v1669 <id3v1669@gmail.com>\n",
]

[features]
rfkill = []

[build-dependencies]
flate2 = "1.1.2"

[dependencies]
clap.workspace = true
env_logger.workspace = true
log.workspace = true
nix.workspace = true
sysinfo.workspace = true

evdev = { version = "0.13.2", features = ["tokio", "stream-trait"] }
itertools = "0.14.0"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.4.1"
signal-hook-tokio = { version = "0.4.0", features = ["futures-v0_3"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-udev = "0.10.0"

[[bin]]
name = "swhkdp"
path = "src/daemon.rs"
