[package]
description = "Simple Wayland HotKey Daemon Polkit"
name = "Simple-Wayland-HotKey-Daemon-Polkit"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[features]
rfkill = []
macro = []

[build-dependencies]
flate2 = "1.1.2"

[dependencies]
clap.workspace = true
env_logger.workspace = true
log.workspace = true
nix.workspace = true
sysinfo.workspace = true

evdev = { version = "0.13.2", features = ["tokio", "stream-trait"] }
itertools = "0.14.0"
kdl = "6.5.0"
regex = "1.12.2"
signal-hook = "0.4.1"
signal-hook-tokio = { version = "0.4.0", features = ["futures-v0_3"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-udev = "0.10.0"

[[bin]]
name = "swhkdp"
path = "src/daemon.rs"
