[package]
description = "Server for swhkd to run shell commands at invoking user level."
edition = "2021"
license = "BSD-2-Clause"
name = "swhks"
version = "1.3.0-git"
authors = [
	"Shinyzenith <aakashsensharma@gmail.com>\n",
	"Angelo Fallaria <ba.fallaria@gmail.com>\n",
	"EdenQwQ <lsahlm1eden@gmail.com>\n",
]

[dependencies]
env_logger.workspace = true
clap.workspace = true
log.workspace = true
nix.workspace = true
sysinfo.workspace = true


[[bin]]
name = "swhks"
path = "src/main.rs"
