[package]
description = "Server for swhkdp to run shell commands at invoking user level."
edition = "2024"
license = "BSD-2-Clause"
name = "swhks"
version = "1.3.1-git"
authors = [
	"id3v1669 <id3v1669@gmail.com>\n",
]

[dependencies]
env_logger.workspace = true
clap.workspace = true
log.workspace = true
nix.workspace = true
sysinfo.workspace = true


[[bin]]
name = "swhks"
path = "src/main.rs"
