[package]
description = "Server for swhkdp to run shell commands at invoking user level."
name = "Simple-Wayland-HotKey-Server"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
env_logger.workspace = true
clap.workspace = true
log.workspace = true
nix.workspace = true
sysinfo.workspace = true


[[bin]]
name = "swhks"
path = "src/main.rs"
